@@ -1,2 +1,0 @@
-This package contains shell scripts that allows ifile to be used in standard
-UNIX e-mail environment with procmail and mbox mailboxes.
