@@ -1,13 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 18:04:34 joerg Exp $
-bin/ifile.inject-learn.header
-bin/ifile.inject.header
-bin/ifile.learn.mailbox
-bin/ifile.learn.message
-bin/ifile.relearn.message
-bin/ifile.reset
-bin/ifile.test-learn.message
-bin/ifile.test.mailbox
-bin/ifile.test.message
-bin/ifile.unlearn.message
-share/doc/ifile/README
-share/examples/ifile/sample.procmailrc
