@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3654 2017/09/08 06:47:44 wiz Exp $
+$NetBSD: CHANGES-2017,v 1.3655 2017/09/08 07:48:19 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -5157,3 +5157,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated audio/pulseaudio to 11.0 [ryoon 2017-09-08]
 	Removed net/p5-Umph-Prompt [wiz 2017-09-08]
 	Added devel/autosetup version 0.6.7 [wiz 2017-09-08]
+	Removed mail/ifile-procmail [wiz 2017-09-08]
